--- a/style.css
+++ b/style.css
@@ -102,3 +102,9 @@ body {
     border: 0;
     transition: all .2s ease;
   }
+
+ @media screen and (max-width: 580px) {
+  .file-upload {
+    width: 100%;
+  }
+}
