--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     border-radius: 15px;
     width: 50%;
     margin: 0 auto;
-    padding: 10%;
+    padding: 5% 10%;
   }
   
   .file-upload-content {
